--- a/zh-CN/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/200.environment-and-configuration-checks/300.configure-the-clock-source-optional.md
+++ b/zh-CN/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/200.environment-and-configuration-checks/300.configure-the-clock-source-optional.md
@@ -6,7 +6,14 @@
 
 <main id="notice" type='explain'>
    <h4>说明</h4>
+   <ul>
+   <li>
    <p>OceanBase 自 V4.1.0 起支持动态修改时钟，不会对数据正确性和集群稳定运行带来影响。</p>
+   </li>
+   <li>
+   <p>若部署 OCP Express 或 OCP 的节点和 OceanBase 集群不在一个节点时，也需为 OCP Express 或 OCP 的节点与 OceanBase 集群节点做时钟源同步，防止使用过程中因时钟偏差引发 OCP Express 或 OCP 操作异常。</p>
+   </li>
+   </ul>
 </main>
 
 ## 前提条件
