--- a/zh-CN/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/400.deploy-by-ui/200.deploy-by-ocp.md
+++ b/zh-CN/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/400.deploy-by-ui/200.deploy-by-ocp.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 
-* 您已部署 OCP，详细操作请参考 [OceanBase 云平台/部署指南](https://www.oceanbase.com/docs/community-ocp-cn-10000000000866609)。
+* 您已部署 OCP，详细操作请参考 [OceanBase 云平台/部署指南](https://www.oceanbase.com/docs/community-ocp-cn-10000000001832350)。
 
 * 当前登录 OCP 的用户拥有 **主机管理** 和 **Create Cluster** 的权限。
 
@@ -14,13 +14,13 @@
 
 * OceanBase 宿主机已安装 python2.7。
 
-* （可选）若您创建的是多副本 OceanBase 集群，则需当前 OCP 中已存在可用的 ODP 集群。如何新增 ODP 集群可参考 [OceanBase 云平台/用户指南/管理 OBProxy/创建 OBProxy 集群](https://www.oceanbase.com/docs/community-ocp-cn-10000000000866412)。
+* （可选）若您创建的是多副本 OceanBase 集群，则需当前 OCP 中已存在可用的 ODP 集群。如何新增 ODP 集群可参考 [OceanBase 云平台/用户指南/管理 OBProxy/创建 OBProxy 集群](https://www.oceanbase.com/docs/community-ocp-cn-10000000001832462)。
 
 ## 操作步骤
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>本文以 OCP V4.0.0 版本为例提供操作指导。不同 OCP 版本的操作界面可能不同，请以实际界面为准。</p>
+  <p>本文以 OCP V4.0.3 社区版本为例提供操作指导。不同 OCP 版本的操作界面可能不同，请以实际界面为准。</p>
 </main>
 
 ### 步骤一：添加机器到 OCP 资源池
@@ -66,54 +66,76 @@
 
 2. 在 **创建集群** 页面，设置集群的基础信息。
 
-   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/2.deploy-by-ocp-03.png)
+   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.2.0/4.deploy/500.deploy-oceanbase-database-community-edition/2.deploy-by-ocp-03.png)
 
    基础信息相关说明如下表所示。
 
    |    **配置**       |     **描述**    |
    |-------------------|-----------------|
+   | **集群类型**      | 选择 **主集群**。 |
    | **集群名称**      | 自定义待管理的集群的名称。集群名称必须以英文字母开头，可支持大小写字母、数字和下划线，长度为 2 \~ 48 个字符。 |
    | **root@sys 密码** | 支持自定义或随机生成。密码需要满足以下复杂度条件：</br> <ul><li>长度：8 \~ 32 字符</li><li>支持字母、数字和特殊字符，且至少包含大、小写字母、数字和特殊字符各 2 个</li><li>支持的特殊字符如下：`~!@#%^&*_-+=|(){}[]:;,.?/`</li></ul> </br>输入密码后，您可以单击 **复制密码**，将自定义或随机生成的密码复制到剪贴板。 |
    | **OB 版本**   | 可以从列表中选择已有的 OceanBase 数据库版本，也可以在下拉菜单中单击 **添加版本**，上传 OceanBase RPM 包。     |
-   | **关联 OBProxy 集群** | 该选项用于关联已有的 ODP 集群，如您创建的是多副本的 OceanBase 集群，建议您打开 **关联 OBProxy 集群** 开关，为该 OceanBase 集群关联 ODP 集群。 关联后您的业务涉及的 SQL 请求将会被精准转发到相应的副本，使您对 OceanBase 数据库的访问效果能够媲美访问单机数据库。<ul><li>默认使用 proxyro 用户关联，您无需填写用户名和密码。</li><li>在下拉框中选择要关联的 ODP 集群。如下拉框中没有可关联的 ODP 集群，请参考本文 **前提条件** 中的描述添加 ODP 集群。</li></ul> |
+   | **关联 OBProxy 集群** | 该选项用于关联已有的 ODP 集群，如您创建的是多副本的 OceanBase 集群，建议您打开 **关联 OBProxy 集群** 开关，为该 OceanBase 集群关联 ODP 集群。 关联后您的业务涉及的 SQL 请求将会被精准转发到相应的副本，使您对 OceanBase 数据库的访问效果能够媲美访问单机数据库。<ul><li>默认使用 proxyro 用户关联，您无需填写用户名和密码。</li><li>在下拉框中选择要关联的 ODP 集群。如下拉框中没有可关联的 ODP 集群，请参考本文 **前提条件** 中的描述添加 ODP 集群。</li></ul> <blockquote>**注意**</br>当 **OB 版本** 中选择的集群为 V4.0 及以上版本时，仅支持关联 V4.0.0 及以上版本的 OBProxy 集群。</blockquote> |
 
 3. 设置集群的部署模式信息。
 
    默认添加 3 个 Zone 的信息，如果您希望部署的集群 Zone 的个数大于 3 个，您可以在下方单击 **+ 新增** 按钮，增加 Zone 信息。如果部署的集群 Zone 的个数小于 3 个，您可以单击 Zone 后面的删除图标。
 
-   ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/2.deploy-by-ocp-04.png)
+   ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.2.0/4.deploy/500.deploy-oceanbase-database-community-edition/2.deploy-by-ocp-04.png)
 
    每个 Zone 需要设置的信息及其说明如下表所示。
 
    |       **配置**     |            **描述**               |
    |--------------------|-----------------------------------|
-   | **Zone 名称**      | 一般会有一个默认名称，您可以根据需要自定义名称。 Zone 名称必须以英文字母开头，可支持大小写字母、数字和下划线，长度为 2 \~ 48 个字符。|
-   | **机房**           | Zone 所在的机房，每个 Zone 中的主机只能部署在同一个机房。|
+   | **Zone 名称**      | 一般会有一个默认名称，您可以根据需要自定义名称。 Zone 名称必须以英文字母开头，可支持大小写字母、数字和下划线，长度为 2 \~ 48 个字符。部署多 Zone 的 OceanBase 集群必须有一个 Zone 与主 Zone 的 Region 相同。 |
+   | **机房**           | Zone 所在的机房，一个 Zone 只能存在于一个机房。|
    | **机型（可选）**   | 如果选择了机型，后面主机列表会根据机型进行过滤。 |
-   | **机器选择方式**   | 可选择 **自动分配** 或者 **手动选择**。        |
-   | **主机**           | 您可以选择多个 IP。如果 **机器选择方式** 是 **自动分配**，则只需要输入机器的数量，OCP 会自动选择相应数量的可用机器；如果 **机器选择方式** 是 **手动选择**，则需要您手动从列表中选择若干个 IP。           |
+   | **CPU 架构**   | 当选择的 **OB 版本** 中存在多个不同架构的安装包时，需选择匹配此软件包的主机硬件架构。<main id="notice" type='notice'><h4>注意</h4><ul><li><p>默认架构类型为第一个安装包的架构类型，支持切换。切换指定架构后，<b>主机</b> 列表中即展示该架构的主机。</p></li><li><p>为不同的 Zone 设置不同的架构时，混合架构部署模式可能存在稳定性与性能问题，请谨慎操作。</p></li></ul></main>        |
+   | **主机**           | 您可以选择多个主机，或进行添加主机的操作。           |
    | **RootServer 位置** | 您需选择一个 IP 作为 Root Service 所在的机器。多副本的 OceanBase 集群，其每个 Zone 都需指定一个 Root Server。        |
-   | **Zone 优先级排序**  | Zone 的优先级排序。该优先级顺序影响 sys 租户的 Primary Zone 的优先级顺序。 左边的列表框中显示了当前集群的所有 Zone。<ol><li>您可以在左侧列表框中选择一个或多个 Zone 添加到右侧的列表框中，默认先选择的 Zone 的优先级高于后选择的 Zone；一次选中的多个 Zone 的优先级相同。</li><li> 移动到右侧的列表框中后，您也可以在右侧的列表框中通过拖拽调整顺序，列表框上方的 Zone 的优先级高于下方的 Zone。 </li></ol>   |
+   | **Zone 优先级排序**  | Zone 的优先级排序。最高优先级的 Zone 会被视为 Primary Zone，且只能有一个。 排序方法如下：<ol><li>勾选左侧列表框中的一个或多个 Zone。左侧列表框中显示了当前集群中所有可选的 Zone。</li><li> 单击中间的 > 按钮。 此时勾选的 Zone 就会被移动到 <b>优先级排序</b> 列表中。同时勾选的多个 Zone 具有相同的优先级。</li><li>重复 1、2 动作，添加低一优先级的 Zone。</li><li>如需调整优先级，可在 <b>优先级排序</b> 列表中拖拽以调整顺序。</li></ol> 列表中从上到下，优先级依次递减。  |
 
-   <main id="notice" type='notice'>
-     <h4>注意</h4>
-     <p>如果设置了 Primary Zone，则 Primary Zone 所在的 Region 必须至少有两个 Zone，并且至少有两个全能型（F）副本（一个 Zone 一个副本）。</p>
+4. 打开 **参数配置** 模块，并配置集群参数。
+
+   * 您可通过如图 ① 处，逐个添加启动参数项并为其配置值。
+
+   * 您也可通过如图 ② 处，单击 **选择参数模板** 选择一个参数模板，系统会将模板中的参数连同配置自动填充到此处。
+
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>在未创建集群参数模板的情况下，您可单击 <b>新建集群模板</b>，为集群创建参数模板，详情可参见 OceanBase 云平台文档 <a href="https://www.oceanbase.com/docs/community-ocp-cn-10000000001832453">集群参数模板管理</a>。</p>
    </main>
 
-4. （可选）在 **创建集群** 页面，参数设置。
+   ![3](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.2.0/4.deploy/500.deploy-oceanbase-database-community-edition/2.deploy-by-ocp-05.png)
 
-   打开 **参数设置**，对参数进行修改。
+5. 打开 **自定义配置**，对路径及端口进行配置。
 
-   ![3](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/4%E5%8F%82%E6%95%B0%E8%AE%BE%E7%BD%AE.png)
+   * 配置路径：
 
-5. （可选）在 **创建集群** 页面，安装路径设置。
+     1. 在 **路径配置** 模块，根据需要自定义 **软件安装路径**、**数据盘路径** 和 **日志盘路径** 。
 
-   根据需要自定义 **软件安装路径**、**数据盘路径** 和 **日志路径**。
+     2. 配置完成后，单击 **测试**，校验路径是否可用。若不可用，您可根据测试结果进行排查，或将路径修改为其它可用路径。
 
-   ![4](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/5%E5%AE%89%E8%A3%85%E8%B7%AF%E5%BE%84%E8%AE%BE%E7%BD%AE.png)
+     ![4](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.2.0/4.deploy/500.deploy-oceanbase-database-community-edition/2.deploy-by-ocp-06.png)
 
-6. 完成后，单击 **提交**。
+   * 配置端口：
+
+     1. 在 **端口配置** 模块，自定义 **SQL 端口** 和 **RPC 端口**。
+
+     2. 配置完成后，单击 **测试**，校验端口是否已被占用。若被占用，您需重新配置可用端口。
+
+     ![5](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.2.0/4.deploy/500.deploy-oceanbase-database-community-edition/2.deploy-by-ocp-07.png)
+
+6. 完成测试后，单击 **提交**。
+
+7. 在弹出的 **确认提交信息** 对话框中，确认信息无误后，单击 **确定**。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p> 您可在 <b>系统管理 > 任务</b> 中查看该任务的执行进度。</p>
+</main>
 
 ## 相关文档
 
-集群部署完成后，需创建业务租户，详细信息请参见 [OcenaBase 云平台/用户指南/管理租户/租户基础操作/创建租户](https://www.oceanbase.com/docs/community-ocp-cn-10000000000866336)。
+集群部署完成后，需创建业务租户，详细信息请参见 [OcenaBase 云平台/用户指南/管理租户/租户基础操作/新建租户](https://www.oceanbase.com/docs/community-ocp-cn-10000000001834181)。
