--- a/zh-CN/600.manage/800.logging/200.log-level.md
+++ b/zh-CN/600.manage/800.logging/200.log-level.md
@@ -1,6 +1,6 @@
 # 日志级别
 
-OceanBase 数据库日志划分了六个日志级别，含义如下表所示。表中的日志级别从高到低依次排列。
+OceanBase 数据库日志划分了七个日志级别，含义如下表所示。表中的日志级别从高到低依次排列。
 
 |日志级别|含义|
 |---|---|
