--- a/zh-CN/700.reference/200.administrator-guide/200.basic-database-management/900.manage-logs/100.log-overview.md
+++ b/zh-CN/700.reference/200.administrator-guide/200.basic-database-management/900.manage-logs/100.log-overview.md
@@ -20,7 +20,7 @@ OceanBase 数据库日志模块所属的日志文件分为 `observer.log` 、`el
 
 ## 日志级别
 
-OceanBase 数据库日志划分了六个日志级别，含义如下表所示。表中的日志级别从高到低依次排列。
+OceanBase 数据库日志划分了七个日志级别，含义如下表所示。表中的日志级别从高到低依次排列。
 
 |    日志级别    |                        含义                                                  |
 |------------|--------------------------------------------------------------------------------|
