--- a/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/400.deploy-through-the-command-line/200.deploy-the-oceanbase-cluster-command-line/100.stand-alone-deployment-of-oceanbase-database-new.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/400.deploy-through-the-command-line/200.deploy-the-oceanbase-cluster-command-line/100.stand-alone-deployment-of-oceanbase-database-new.md
@@ -161,14 +161,14 @@
    必须在 `admin` 用户下启动 observer 进程，启动语句如下：
 
    ```shell
-   /home/admin/oceanbase/bin/observer {-I $ip | -i $devname} -P $rpc_port -p $sql_port -z $zone_name -d /home/admin/oceanbase/store/$cluster_name -r '$ip:2882:2881' -c $cluster_id -n $cluster_name -o "system_memory=30G,datafile_size=100G,config_additional_dir=/data/1/$cluster_name/etc3;/data/log1/$cluster_name/etc2"
+   /home/admin/oceanbase/bin/observer -i $devname -P $rpc_port -p $sql_port -z $zone_name -d /home/admin/oceanbase/store/$cluster_name -r '$ip:2882:2881' -c $cluster_id -n $cluster_name -o "system_memory=30G,datafile_size=100G,config_additional_dir=/data/1/$cluster_name/etc3;/data/log1/$cluster_name/etc2"
    ```
 
    **参数解释：**
 
    |**参数**|               **说明**     |
    |--------|----------------------------|
-   | `-I` \| `-i`   | <ul><li>`-I`：指定待启动的节点 IP。在多机部署场景下，不能指定 127.0.0.1 作为目标 IP。建议使用指定 IP（例如：`-I 10.10.10.1`）来启动节点。</li><li>`-i`：指定网卡名，可通过 `ifconfig` 命令查看。</li></ul><main id="notice" type='explain'><h4>说明</h4><p>支持通过同时指定 IP 和网卡名（例如：`-I 10.10.10.1 -i eth0`）来启动节点，但不建议这么用。</p></main>|
+   | `-i`   | 指定网卡名，可通过 `ifconfig` 命令查看。|
    | `-p`   | 指定服务端口号，一般指定为 `2881`。|
    | `-P`   | 指定 RPC 端口号，一般指定为 `2882`。|
    | `-n`   | 指定集群名称。可自定义，不同集群名称不要重复即可。|
@@ -183,7 +183,7 @@
 
    ```shell
    [root@xxx /home/admin]# su - admin
-   -bash-4.2$ /home/admin/oceanbase/bin/observer -I 10.10.10.1 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
+   -bash-4.2$ /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
    ```
 
    可以通过下面命令查看 observer 进程是否启动成功：
@@ -204,7 +204,7 @@
    ...        ...    ...                       ...                     ...         ...
 
    -bash-4.2$ ps -ef|grep observer
-   admin    115745      0 43 17:58 ?        00:00:14 /home/admin/oceanbase/bin/observer -I 10.10.10.1 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r 10.10.10.1:2882:2881 -c 10001 -n obdemo -o system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2
+   admin    115745      0 43 17:58 ?        00:00:14 /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r 10.10.10.1:2882:2881 -c 10001 -n obdemo -o system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2
    ```
 
 2. 集群 bootstrap 操作。
