--- a/zh-CN/500.data-migration/1000.use-sql-statements-migrate-data/300.use-outfile-statements-to-migrate-data.md
+++ b/zh-CN/500.data-migration/1000.use-sql-statements-migrate-data/300.use-outfile-statements-to-migrate-data.md
@@ -90,7 +90,7 @@ start_and_end_option:
 
    <main id="notice" type='notice'>
      <h4>注意</h4>
-     <p>由于安全原因，只能使用通过本地连接的 Client 执行修改 <code>secure_file_priv</code> 的 SQL 语句。详细信息请参见 <a href="../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11500.secure_file_priv-global.md">secure_file_priv</a></p>
+     <p>由于安全原因，只能使用通过本地连接的 Client 执行修改 <code>secure_file_priv</code> 的 SQL 语句。详细信息请参见 <a href="../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11500.secure_file_priv-global.md">secure_file_priv</a>。</p>
    </main>
 
     1. 登录到要连接的 OBServer 节点。
