--- a/zh-CN/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/500.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/500.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -304,7 +304,7 @@
       | datafile_maxsize  | 可选  | 0      | 限制磁盘空间的最大可用上限，用于设置自动扩容，未配置的情况下若要开启自动扩容功能可参见 [配置磁盘数据文件的动态扩容](../../../700.reference/200.system-management/1000.disk-data-file-management/100.disk-data-file-dynamic-expansion.md)。 |
       | log_disk_size  | 可选      | 0        | 用于设置 Redo 日志磁盘的大小，未配置的情况下以`log_disk_percentage` 配置项为准，详细介绍请参考 [log_disk_size](../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/23700.log_disk_size.md) 和 [log_disk_percentage](../../../700.reference/800.configuration-items-and-system-variables/100.system-configuration-items/300.cluster-level-configuration-items/23800.log_disk_percentage.md)。 |
       | enable_syslog_wf  | 可选      | true      | 设置是否把 WARN 以上级别的系统日志打印到一个单独的日志文件中。 |
-      | enable_syslog_recycle  | 可选      | false        | 指定是否自动回收系统日志，需要和 `max_syslog_file_count` 参数搭配使用，当 `max_syslog_file_count` 设置为非 0 值时才会生效。 |
+      | enable_syslog_recycle  | 可选      | false        | 设置是否开启回收系统日志，需要和 `max_syslog_file_count` 参数搭配使用，当 `max_syslog_file_count` 设置为非 0 值时才会生效。 |
       | max_syslog_file_count  | 可选      | 0        | 设置在回收日志文件之前可以容纳的日志文件数量。值为 0 时表示不自动清理。 |
       | ocp_meta_tenant  | 可选      | tenant_name: ocp</br>max_cpu: 1</br>memory_size: 2147483648        | 配置 OCP Express 所需的 meta 租户规格，ocp_meta_tenant 下的配置都会作为创建租户时的参数传入。</br>示例中仅列举了几个重要配置，具体可配置参数可参考创建租户命令支持的参数，详情请参见 OBD 文档 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000002049482) 中 **obd cluster tenant create** 命令介绍。 |
       | mysql_port  | 必选      | 2881        | 设置 SQL 服务协议端口号，默认为 2881。 |
