--- a/zh-CN/700.reference/500.system-reference/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/100.dictionary-view-overview-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.system-reference/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/100.dictionary-view-overview-of-mysql-mode.md
@@ -163,7 +163,7 @@ Session 相关
 |-------------------------------------------------------------------------------------|---------------------------------------------|
 | [information_schema.SESSION_STATUS](../200.dictionary-view-of-mysql-mode/2000.information_schema-session_status-of-mysql-mode.md)    | 记录 Session 的状态信息，如当前活跃连接数，数据库活跃时间（Uptime）等。 |
 | [information_schema.SESSION_VARIABLES](../200.dictionary-view-of-mysql-mode/2100.information_schema-session_variables-of-mysql-mode.md) | 记录 Session 的变量信息。                           |
-| [oceanbase.CDB_OB_DEADLOCK_EVENT_HISTORY](../200.dictionary-view-of-mysql-mode/15700.oceanbase-cdb_ob_deadlock_event_history-of-mysql-mode.md) | 展示死锁事件的历史记录，该视图在 root 租户下展示所有租户的历史记录。                       |
+| [oceanbase.CDB_OB_DEADLOCK_EVENT_HISTORY](../200.dictionary-view-of-mysql-mode/15700.oceanbase-cdb_ob_deadlock_event_history-of-mysql-mode.md) | 展示死锁事件的历史记录，该视图在 SYS 租户下展示所有租户的历史记录。                       |
 | [oceanbase.DBA_OB_DEADLOCK_EVENT_HISTORY](../200.dictionary-view-of-mysql-mode/15800.oceanbase-dba_ob_deadlock_event_history-of-mysql-mode.md) | 展示死锁事件的历史记录，该视图在非 root 租户下展示本租户的历史记录。                           |
 | [oceanbase.DBA_OB_SERVER_EVENT_HISTORY](../200.dictionary-view-of-mysql-mode/17900.oceanbase-dba_ob_server_event_history-of-mysql-mode.md) | 展示 OBServer 节点事件历史信息。                      |
 
