--- a/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/200.manage-tables-of-mysql-mode/600.change-table-of-mysql-mode.md
+++ b/zh-CN/700.reference/300.database-object-management/100.manage-object-of-mysql-mode/200.manage-tables-of-mysql-mode/600.change-table-of-mysql-mode.md
@@ -133,18 +133,6 @@ OceanBase 数据库支持增加列、修改列及其属性、删除列等。
 
 支持重命名列、修改列类型以及列的默认值。
 
-假设有一表 `test`，其表结构如下所示。
-
-```shell
-+-------+-------------+------+-----+---------+-------+
-| Field | Type        | Null | Key | Default | Extra |
-+-------+-------------+------+-----+---------+-------+
-| c1    | int(11)     | NO   | PRI | NULL    |       |
-| c2    | varchar(50) | YES  |     | NULL    |       |
-+-------+-------------+------+-----+---------+-------+
-2 rows in set
-```
-
 * 重命名列。
 
   使用 `RENAME COLUMN` 关键字重命名列时，需要注意以下事项：
@@ -167,7 +155,19 @@ OceanBase 数据库支持增加列、修改列及其属性、删除列等。
 
   * 待重命名的列被 CHECK 约束引用
 
-  重命名列的示例如下：
+  假设有一表 `test`，其表结构如下所示。
+
+  ```shell
+  +-------+-------------+------+-----+---------+-------+
+  | Field | Type        | Null | Key | Default | Extra |
+  +-------+-------------+------+-----+---------+-------+
+  | c1    | int(11)     | NO   | PRI | NULL    |       |
+  | c2    | varchar(50) | YES  |     | NULL    |       |
+  +-------+-------------+------+-----+---------+-------+
+  2 rows in set
+  ```
+  
+  将表 `test` 的 `c2` 列重命名为 `c` 的示例如下。
 
   ```sql
   obclient> ALTER TABLE test RENAME COLUMN c2 TO c;
@@ -189,6 +189,20 @@ OceanBase 数据库支持增加列、修改列及其属性、删除列等。
 
   OceanBase 数据库中 MySQL 模式下列类型的转换规则及详细信息请参见 [列类型变更规则](../../../500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/700.ddl-function-of-mysql-mode/900.column-type-change-rule-of-mysql-mode.md)。
 
+  假设有一表 `test`，其表结构如下所示。
+
+  ```shell
+  +-------+-------------+------+-----+---------+-------+
+  | Field | Type        | Null | Key | Default | Extra |
+  +-------+-------------+------+-----+---------+-------+
+  | c1    | int(11)     | NO   | PRI | NULL    |       |
+  | c2    | varchar(50) | YES  |     | NULL    |       |
+  +-------+-------------+------+-----+---------+-------+
+  2 rows in set
+  ```
+
+  将表 `test` 的 `c2` 列修改为 CHAR 类型的示例如下。
+
   ```sql
   obclient> ALTER TABLE test MODIFY c2 CHAR(60);
   ```
@@ -206,6 +220,20 @@ OceanBase 数据库支持增加列、修改列及其属性、删除列等。
   ```
 
 * 修改列名同时修改列类型。
+
+  假设有一表 `test`，其表结构如下所示。
+
+  ```shell
+  +-------+-------------+------+-----+---------+-------+
+  | Field | Type        | Null | Key | Default | Extra |
+  +-------+-------------+------+-----+---------+-------+
+  | c1    | int(11)     | NO   | PRI | NULL    |       |
+  | c2    | varchar(50) | YES  |     | NULL    |       |
+  +-------+-------------+------+-----+---------+-------+
+  2 rows in set
+  ```
+
+  将表 `test` 的 `c2` 列重命名为 `c` 并将其数据类型修改为 CHAR 类型的示例如下。
 
   ```sql
   obclient> ALTER TABLE test CHANGE COLUMN c2 c CHAR(60);
