--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/400.functions-of-mysql-mode/700.json-functions-of-mysql-mode/450. json-table-functions-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/400.functions-of-mysql-mode/700.json-functions-of-mysql-mode/450. json-table-functions-of-mysql-mode.md
@@ -2,7 +2,7 @@
 
 ## 描述
 
-`JSON_TABLE()` 函数用于将 JSON 数据从半结构化数据转为结构化数据，即从 JSON 文档中提取数据并返回具有指定列的关系表。`JSON_TABLE()` 为每一个 JSON 值提供了列输出，对于 JSON 内的数组，提供了多行（列）输出。
+`JSON_TABLE()` 函数用于将 JSON 数据从半结构化数据转为结构化数据，即从 JSON 文档中提取数据并返回具有指定列的关系表。`JSON_TABLE()` 为每一个 JSON 值提供了列输出，对于 JSON 内的数组，也提供了多行（列）输出。
 
 ## 语法
 
@@ -40,7 +40,7 @@ json_value_on_error_clause:
    * `column_name FOR ORDINALITYFOR` 子句用于为当前输出行提供行号，其中 `column_name` 是 `INT` 类型的列。
    * `column_name data_type PATH path_literal [json_value_on_empty_clause] [json_value_on_error_clause]` 子句用于提取 `path_literal` 指定的数据为 JSON 并强制转换为列类型。如果缺失值会触发可选的 `json_value_on_empty_clause` 子句；如果保存对象或数组会触发可选 `json_value_on_error_clause` 子句。
    * `column_name data_type EXISTS PATH path_literal` 子句：如果 `path_literal` 指定的位置存在任何数据，则此列返回 1，否则返回 0。
-   * `NESTED [PATH] path_literal COLUMNS (column_list)` 子句表示重复的嵌套结构，可以在其中继续定义以上四种列类型。
+   * `NESTED [PATH] path_literal COLUMNS (column_list)` 子句表示重复的嵌套结构，可以在其中继续定义 `column` 的四种列类型。
 
 * `data_type`：指定数据类型，当前支持 OceanBase 数据库 MySQL 模式下的所有数据类型。
 * `alias`：指定表别名。
@@ -48,7 +48,7 @@ json_value_on_error_clause:
 * `json_value_on_empty_clause`：如果经过 Path 筛选的数据是空值时用户可选的预期行为，可选行为包含三种：`NULL`、`ERROR` 和默认值 `DEFAULT`。
 
    * `NULL ON EMPTY`：将该列设置为 `NULL`。为默认行为。
-   * `DEFAULT json_string`：将默认值 `json_string` 解析为 JSON。 
+   * `DEFAULT json_string`：将 `json_string` 解析为默认值取代 JSON 对象或者数组。 
    * `ERROR ON EMPTY`：抛出错误。
 
 * `json_value_on_error_clause`：如果表达式执行期间发生错误，用户可以使用预期的行为去覆盖该错误，可选择的行为包含三种：`NULL`、`ERROR` 和默认值 `DEFAULT`。可选行为和 `json_value_on_empty_clause` 一致。
