--- a/zh-CN/700.reference/1000.performance-tuning-guide/300.system-tuning/200.database-parameter-tuning/100.cpu-parameters.md
+++ b/zh-CN/700.reference/1000.performance-tuning-guide/300.system-tuning/200.database-parameter-tuning/100.cpu-parameters.md
@@ -4,7 +4,7 @@
 |------------------------------------|----------------------------------|----------------------------------------------------------------------------------------------------|
 | workers_per_cpu_quota              | 此参数 \* 租户 max_cpu = 租户能分配的最大线程数  | 这里的最大线程数是分配出来的，可以使用的，并不是同时运行的最大线程数。此参数一般不做调整。                                                      |
 | net_thread_count                   | 接收客户端请求的网络线程数                    | 重启生效，top -H 查看 MySQLIO 线程的使用效率，如果使用大于 90%，说明接收请求的线程可能成为了瓶颈，建议提高该参数，如果所有线程都小于 50%，建议减小该参数，减低线程切换的开销 |
-| autoinc_cache_refresh_interval     | 设置自动切主后台线程工作间隔时间                 | 建议调大                                                                                               |
+| autoinc_cache_refresh_interval     | 设置自增列缓存的刷新间隔                 | 建议调大                                                                                               |
 | enable_early_lock_release          | 开启提前解行锁                          | 热点行场景建议开启                                                                                          |
 | enable_monotonic_weak_read         | 开启单调读                            | 性能场景建议关闭                                                                                           |
 | weak_read_version_refresh_interval | 弱一致性读版本号的刷新周期                    | 值为 0 时，表示不再刷新弱一致性读版本号，不提供单调读功能，性能场景建议关闭                                                            |
