--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2600.create-table-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/2600.create-table-of-mysql-mode.md
@@ -249,10 +249,10 @@ partition_count | subpartition_count:
 * 为表 `ref_t2` 指定外键，当 `UPDATE` 操作影响与子表相匹配行的父表中键值时，执行 `SET NULL` 操作。
 
   ```shell
-  obclient> CREATE TABLE ref_t1(c1 INT PRIMARY KEY，C2 INT);
+  obclient> CREATE TABLE ref_t1(c1 INT PRIMARY KEY, C2 INT);
   Query OK, 0 rows affected
 
-  obclient> CREATE TABLE ref_t2(c1 INT PRIMARY KEY，C2 INT,FOREIGN KEY(c2) REFERENCES ref_t1(c1) ON UPDATE SET NULL);
+  obclient> CREATE TABLE ref_t2(c1 INT PRIMARY KEY, C2 INT,FOREIGN KEY(c2) REFERENCES ref_t1(c1) ON UPDATE SET NULL);
   Query OK, 0 rows affected
   ```
 
